--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,56 @@
     transform: rotate(360deg);
   }
 }
+
+/* milestone */
+.table-one{
+  height:500px;
+  width: 30%;
+}
+.image{
+  height: 100px;
+  width: 100px;
+}
+
+
+.row {
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+table, th, td {
+  border: 1px solid #ddd;
+}
+
+th, td {
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+.image {
+  max-width: 100px;
+  max-height: 100px;
+}
+
+button {
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  margin-right: 5px;
+}
+
+.bg-info {
+  background-color: #17a2b8;
+}
